2013-06-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f753.inc, p16hv753.inc, header/p16f1704.inc,
    header/p16f1708.inc, header/p16lf1704.inc, header/p16lf1708.inc,
    lkr/16f753_g.lkr, lkr/16hv753_g.lkr:
    Fresh based on the mplabx-1.85.

2013-05-17  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: generate error if CONFIG directive is used with
    non 16 bit devices

2013-05-14  Borut Razem  <borutr@users.sourceforge.net>
  * doc/html-help/Makefile.am, doc/html-help/Makefile.in:
    define -gp option as gputils source directory instead of
    repository root

2013-05-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c, libgputils/gpcfg-table.c:
    Repair and supplement.

2013-05-11  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx: various updates

2013-05-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am, header/Makefile.in, header/p16f1704.inc,
    header/p16f1708.inc, header/p16lf1704.inc, header/p16lf1708.inc,
    header/p16lf1xxx.inc, lkr/Makefile.am, lkr/Makefile.in,
    lkr/16f1704_g.lkr, lkr/16f1708_g.lkr, lkr/16lf1704_g.lkr,
    lkr/16lf1708_g.lkr, libgputils/gpprocessor.c, doc/gputils.lyx:
    New MCU-s based on the mplabx-1.8.
  * header/p16f753.inc:
    Fresh based on the mplabx-1.8.
  * header/p16f1782.inc, header/p16f1783.inc, header/p16lf1782.inc,
    header/p16lf1783.inc:
    Repaired the faulty gputils's entries.

2013-05-09  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpmemory.c:
    fixed bug #264 gpasm 1.1.0 core dumps using mixed CONFIG __CONFIG
    word memory location is used if at least one byte is used
  * include/stdhdr.h: updated copyright year
  * gpasm/directive.c:
    fixed default access RAM argument for 16bit extended instructions
  * gpasm/directive.c, gpasm/coff.c: fixed __CONFIG section generation
    for configs on odd address